# pyrtist

./: INSTALL  MANIFEST.in  README.rst  local_launch.py  setup.py
admin/: VERSIONS  adjust_version.sh  version.sh
box/: AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.dev  PROBLEMS  README  STYLE  TODO  configure.ac  example.box  idee.txt  test.box  test3.box
box/admin/: HELP  VERSIONS
box/box/: Makefile.am  allocpool.c  allocpool.h  allocpool_priv.h  argparse.c  argparse.cc  argparse.h  argparse_priv.h  array.c  array.h  ast.c  ast.h  ast_priv.h  astnodes.h  autogen.c  autogen.h  bltinarray.c  bltinarray.h  bltinarray_priv.h  bltinio.c  bltinio.h  bltinstr.c  bltinstr.h  box.c  builtins.c  builtins.cc  builtins.h  callable.c  callable.h  callable_priv.h  cmpproc.c  cmpproc.h  cmpptrs.h  combs.c  combs.h  combs_priv.h  compiler.c  compiler.cc  compiler.h  compiler_priv.h  (+135 more)
box/bugs/: structure.box
box/common/: array.c  defaults.h  hashtable.c  hashtable.h  main.c  messages.h  str.c  str.h  types.h
box/compiler/: builtins.c  builtins.h  compiler.c  compiler.h  library.c  news.c  parser.h  parser.yacc.c  registers.c  structure.c  symbols.c  tmp.c  tokenizer.lex.c  typeman.c
box/compiler/old/: old.compiler.c  old.old.compiler.c  old.old.compiler.h  old.parser.yacc.c  old.tokenizer.lex.c  old_compiler.c
box/doc/: Makefile  box-logo.box  box.sgml  circle.txt  circle.txt.in  color.txt  color.txt.in  devguide.txt  installation.txt  line.box  line.txt.in  manual.txt  pointlist.box  pointlist.txt  pointlist.txt.in  poly.box  poly.txt  poly.txt.in  put.txt  rst2html.py  text.txt  versions.txt  window.box  window.txt.in
box/doc/html/: style.css
box/dox/: browse.py  dox.py  gtktext.py  rst.py  rstparser.py  tree.py  writer.py
box/examples/: Makefile.am  border.box  box-logo.box  cairo.box  cairo_set_line_cap.box  closed_line.box  curved_arrow.box  cycloid.box  fractree.box  gradient.box  losing_eyes.bash  losing_eyes.box  multivibrator.box  newton.box  pointlist.box  pythagoras.box  snake.box  stt.box  text.box  tour.bash  tour.sh  translucency.box  translucent.box  wheatstone.box  wheel.box  yin-yang.box
box/examples/smileys/: Makefile.am  bouncing.bash  bouncing.box  losing_eyes.bash  losing_eyes.box  machine.bash  machine.box  shy.bash  shy.box  washing_machine.bash  washing_machine.box
box/libs/g/: Makefile.am  _area.bxh  _arrows.bxh  _bbox.bxh  _circle.bxh  _color.bxh  _gradient.bxh  _line.bxh  _matrix.bxh  _oldstyle.bxh  _pointlist.bxh  _poly.bxh  _put.bxh  _rectangle.bxh  _sphere.bxh  _style.bxh  _text.bxh  _window.bxh  area.bxh  arrows.bxh  autoput.c  autoput.h  axes.box  bb.c  bb.h  bbox.box  bbox.bxh  bitmap.h  bm1bit.c  bm4bit.c  bm8bit.c  bmcommon.c  bmcommon.h  bounce.bxh  bridge.c  bridge.h  buffer.c  buffer.h  cairo.c  caps.box  (+133 more)
box/libs/g2/: circle.bxh  clip.bxh  cmdstream.bxh  fill.bxh  path.bxh  poly.bxh  style.bxh  test.box  test_clip.box  text.bxh
box/maint/: HELP  VERSIONS  adjust_configure_ac.sh  version.sh
box/man/: box.html  box.sgml  box.sxw
box/man/tutorial/: poly.box
box/obsolete/: EXAMPLES  structure.c  test2.box
box/obsolete/common/: debug.h  str.c  str.h
box/obsolete/compiler/: compiler.h  tokenizer.lex.c
box/obsolete/virtmach/: virtmach.c
box/other/: alpha.xml  box.xml
box/prototypes/: doxygen.h  file.c
box/src/: Makefile.am  array.c  array.h  autogen.c  autogen.h  bltinio.c  bltinio.h  bltinstr.c  bltinstr.h  box.c  box.h  builtins.c  builtins.h  chest.c  chest.h  collection.c  collection.h  compiler.c  compiler.h  container.c  container.h  defaults.h  error.h  expr.c  expr.h  fileutils.c  fileutils.h  hashfunc.c  hashtable.c  hashtable.h  list.c  list.h  main.c  mem.c  mem.h  messages.c  messages.h  msgbase.c  msgbase.h  parser.y  (+33 more)
box/tests/: Makefile.am  any.py  bugs.bash  bugs.py  bugs.txt  common.bash  destructors.bash  operator_prec.py  ops.py  raised.py  scope.bash  scope.py  structure.bash  structure.py  subtypes.py  test.py  test_all.py
box/tests/dylib/: Makefile  Makefile.dev  mylib.box  mylib.c  test_mylib.box
box/tmp/: tmp.c
box/virtmach/: virmac_desc.txt  virtmach.c  virtmach.h  vmexec.c
box/virtmach/vlib/: subparser.c
boxer/: ChangeLog  INSTALL  MANIFEST  MANIFEST.in  boxer.glade  boxer.py  config.py  imgview.py  info.py  pointman.py  setup.py
boxer/admin/: HELP  VERSIONS  adjust_version.sh
boxer/examples/: bang.box  wheatstone.box
boxer/icons/: circle.box  color.box  icon_theme.box  line.box  poly.box
boxer/scripts/: boxer  pyrtist
boxer/src/: __init__.py  assistant.py  boxdraw.py  boxer.py  boxmode.py  colortool.py  comparse.py  config.py  docbase.py  document.py  document0.py  document1.py  editable.py  exec_command.py  execbox.py  fonttool.py  geom2.py  imgview.py  info.py  inputtool.py  macro.py  main.py  menus.py  namegen.py  refpoints.py  srcview.py  textslice.py  toolbox.py  win_setup.py  zoomable.py
old/box/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  TODO  idee.txt
pyrtist/: INSTALL  MANIFEST.in  README  __init__.py  __main__.py  build-win-exec.sh  local_launch.py  setup.py  win_setup.py
pyrtist/deepsurface/: deep_surface.cc  deep_surface.h  depth_buffer.cc  depth_buffer.h  draw_depth.h  geom.h  image_buffer.cc  image_buffer.h  mesh.cc  mesh.h  obj_parser.cc  py_depth_buffer.cc  py_depth_buffer.h  py_helper.h  py_image_buffer.cc  py_image_buffer.h  py_init.cc  py_mesh.cc  py_mesh.h  sampler.h  texture.cc  texture.h
pyrtist/examples/: cairo_gradient.py  draw_with_cairo.py  fractal.py  fractree.py  losing_eyes.box  math_sketch.py  multivibrator.py  plot.box  seascape_glsl.py  surf_charges.py  tutorial02-polygons.py  wheatstone.py
pyrtist/gui/: __init__.py  assistant.py  base.py  boxmode.py  callbacks.py  colortool.py  config.py  document.py  editable.py  fonttool.py  geom2.py  info.py  inputtool.py  mainwindow.py  namegen.py  pydraw.py  refpoints.py  renderer.py  rotpaned.py  scriptrunner.py  srcview.py  toolbox.py  undoer.py  zoomable.py
pyrtist/icons/: curve.box  fontall.box  fonttype.box  (+2 more)
regression/: regression.py
scripts/: pyrtist
(+722 files in other folders)
