# Add files to the distribution generated with 'make dist'
EXTRA_DIST = snake.box mysin.box wheatstone.box multivibrator.box \
             cycloid.box box-logo.box curved_arrow.box cairo.box \
             translucency.box yin-yang.box fractree.box gradient.box \
             pythagoras.box
SUBDIRS = smileys

